Test self-hosted runner on old KOP laptop

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ name: Robot code validation
 # events but only for the main branch.
 on: 
   push:
+  workflow_dispatch:
   pull_request:
     branches: [ main ]
 
@@ -14,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # This grabs the WPILib docker container
     container: wpilib/roborio-cross-ubuntu:2023-22.04
